# yolox_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: bbox.rs  lib.rs  main_cli.rs  visualize.rs  yolox.rs
